--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,11 @@
 .postRaw {
     font-size: 16px;
     width: 300px;
-    height: 30px;
+    /* height: 30px; */
     margin: auto;
     border-bottom: solid 2px rgb(255, 255, 255);
     background-color: rgb(198, 232, 255);
+}
+.error {
+    color: rgb(219, 76, 76);
 }
