--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,6 +27,10 @@ body{
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
 }
 
+.replies_num{
+    display: inline-block;
+}
+
 .space {
     white-space: pre-wrap;
 }
