--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,13 +75,16 @@ body{
     text-align: left;
 }
 
+h1{
+    font-size: 30px;
+}
 
 .post_form {
     position: relative;
 	width: 80%;
     /* margin: 10px 3%; */
-    margin: 30px auto 50px auto;
-    font-size: 18px;
+    margin: 20px auto 30px auto;
+    font-size: 16px;
 }
 
 /* .post_form input, textarea {
@@ -105,6 +108,7 @@ body{
 .form_box > label {
     width: 130px;
     text-align: center;
+    margin: 0;
 }
 .form_box > input, textarea {
      display: block;
@@ -141,6 +145,11 @@ body{
 
 .post_form > button:hover {
     opacity: 0.8;
+}
+
+.post_form textarea {
+    height: calc( 1.3em * 5 );
+    line-height: 1.3;
 }
 
 .form_box a {
