--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -143,6 +143,25 @@ h1{
     text-align: center;
 }
 
+.delete_button{
+    background-color: #F5DEB3;
+    border: 1px solid #F5DEB3;
+    border-radius: 4px;
+    color: #000;
+    display: block;
+    width: 100px;
+    margin: 0px 0px 0px auto;
+    line-height: 24px;
+    font-size: 10px;
+    cursor: pointer;
+    text-align: center;
+}
+.delete_button:hover{
+    opacity: 0.8;
+}
+
+
+
 .post_form > button:hover {
     opacity: 0.8;
 }
