ユーザ一覧を表示する管理画面を作成。 Userテーブルに管理者フラグと削除フラグを追加。

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -212,3 +212,25 @@ h1{
 }
 
 
+table{
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+}
+
+table tr{
+  border-bottom: solid 1px #eee;
+  cursor: pointer;
+}
+
+table tr:hover{
+  background-color: #d4f0fd;
+}
+
+table th,table td{
+  text-align: center;
+  width: 25%;
+  padding: 15px 0;
+}
+
+
